tests/baselines/reference/for-of12.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of12.ts(2,6): error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
  Type '数字' is not assignable to type '文字'.


==== tests/cases/conformance/es6/for-ofStatements/for-of12.ts (1 errors) ====
    var v: string;
    for (v of [0, ""].values()) { }
         ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.